--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,10 +1,7 @@
 .card {
-  width: 18rem;
-  height: 22.5rem;
   text-align: center;
-  color: rgb(97, 8, 97);
   margin-bottom: 2rem;
-  box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.294);
+  @apply border-2 p-3 flex flex-col items-center;
 }
 
 .card-header {
@@ -14,14 +11,20 @@
 }
 
 .card-img {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
 }
 
 .card h3 {
   margin: 0.5rem 0;
+  @apply mt-3 text-xl;
 }
 
 .card p {
   margin: 0;
+  @apply mt-3 text-xl;
+}
+
+.btn {
+  @apply text-center bg-red-500 w-32 mt-4 text-white p-2 rounded text-lg hover:bg-red-400;
 }
